@@ -1,5 +1,10 @@
 2003-09-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Connect to the error callback.
+
+2003-09-29  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extractor.[ch]:
 	Add an error signal for reporting errors.
 
